BAP-5348: Fix datetime picker layout on mobile

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/filter.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/filter.less
@@ -84,7 +84,7 @@
     white-space: nowrap;
     overflow: hidden;
     vertical-align: bottom;
-    padding-right: 35px;
+    padding-right: 43px;
     position: relative;
     .filter-criteria-hint {
       display: inline;
@@ -107,6 +107,7 @@
         padding: 0;
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
+        #gradient > .vertical(#fdfdfd, #efefef);
       }
       [class^='icon-'].hide-text:before {
         color: #666;
